--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,12 +4,27 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
    
 }
+/* HEADINGS */
 
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: white;
 }
+
+.header--secondary {
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
+
+.header--fourth {
+    font-weight: normal;
+    font-size: 21px;
+    color: lightgray;
+}
+
+/* LINKS */
 
 .link--cta {
     color: aquamarine;
